<resources>

    <string name="app_name">Template</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Editame!</string>
    <string name="button_send">Enviame!</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_add_document">AddDocumentActivity</string>
    <string name="doc_title">Título del chiste</string>
    <string name="doc_title_hint">Título</string>
    <string name="doc_content">Contenido</string>
    <string name="mail">E-mail</string>
    <string name="password">Password</string>
    <string name="empty"></string>
    <string name="title_activity_select_action">Opciones</string>
    <string name="repositories">Ver Respositorios</string>
    <string name="search">Buscar</string>
    <string name="add_doc">Agregar documento</string>
    <string name="title_activity_show_repos">Repositories</string>
    <string name="save">Guardar</string>
    <string name="back">Volver</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="serachHint">Ingresa tu búsqueda</string>
    <string name="submit">Enviar</string>

</resources>